<resources>
    <string name="app_name">MyBrightMind</string>
    <string name="image_for_home_screen">Image for Home Screen</string>
    <string name="homescreen_image">Home-screen Image</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="ready_to_explore">Ready to Explore?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="you_are">Are you a…</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="teacher">Teacher</string>
	<string name="heading">Heading</string>
    <string name="subheading">SubHeading</string>
    <string name="fill_images">Fill Images</string>
	<string name="general_image">General Image</string>
	<string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="learn">Learn</string>
    <string name="rewards">Rewards</string>
    <string name="search">Search</string>
	<string name="good_morning">Good Morning,</string>
    <string name="user_name">User Name</string>
    <string name="courses">Courses</string>
    <string name="see_all_courses">See All Courses</string>
    <string name="story_world">Story World</string>
    <string name="see_all_books">See All Books</string>
	<string name="start_learning">Start Learning</string>
	<string name="learning_is_fun">Learning is Fun</string>
    <string name="you_have_not_enrolled_in_any_courses_yet">You have not enrolled in any courses yet</string>
    <string name="start_by_enrolling_in_a_course_and_learn_something_new">Start by enrolling in a course and learn something new.</string>
    <string name="explore_courses">Explore Courses</string>
	<string name="begin_exploring">Begin Exploring!</string>
	<string name="you_are_about_to_embark_on_an_exciting_journey">You are about to embark on an exciting journey</string>
    <string name="your_completed_courses_and_rewards_will_be_here">Your completed courses and rewards will be here.</string>
    <string-array name="headings">
        <item>
        Tap, Learn and Explore!
        </item>
        <item>
            Play, Learn and Conquer
        </item>
        <item>
            Screen Time is Smart Time!
        </item>
        <item>
            Turn Lessons into Adventures!
        </item>
    </string-array>
    <string-array name="sub_headings">
        <item>
            Discover cool facts, solve mysteries and play your way to knowledge
        </item>
        <item>
            Crack mysteries and unlock knowledge! Learning has never been this fun!
        </item>
        <item>
            Fun for them, peace of mind for you! Track progress and fuel curiosity.
        </item>
        <item>
            Goodbye boring lessons, hello adventure! Engage students like never before!
        </item>
    </string-array>
</resources>