<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFF"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="150dp"
		android:background="#FFFFFF"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="50dip"
			android:layout_marginEnd="50dip"
			app:cardElevation="0dp"
			app:cardMaxElevation="0dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#FFF"
				android:orientation="vertical">

				<ImageSwitcher
					android:id="@+id/HomeImage"
					android:layout_width="match_parent"
					android:layout_height="240dip"
					android:background="#FFF"
					android:contentDescription="@string/homescreen_image" />

				<TextView
					android:id="@+id/Heading"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dip"
					android:background="#FFF"
					android:text="@string/heading"
					android:textAlignment="center"
					android:textColor="#000000"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/SubHeading"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip"
					android:background="#FFF"
					android:text="@string/subheading"
					android:textAlignment="center"
					android:textColor="#000000"
					android:textSize="16sp" />

				<ImageSwitcher
					android:id="@+id/fillImage"
					android:layout_width="match_parent"
					android:layout_height="15dip"
					android:layout_marginTop="10dip"
					android:background="#FFF"
					android:contentDescription="@string/fill_images" />

			</LinearLayout>

		</androidx.cardview.widget.CardView>

		<Space
			android:layout_width="match_parent"
			android:layout_height="210dip"
			android:background="#FFF" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#FFF"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/Skip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="30dip"
				android:text="@string/skip"
				android:textColor="#000000"
				android:textSize="16sp"
				android:textStyle="bold"
				/>

			<Space
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1" />

			<Button
				android:id="@+id/Next"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="30dip"
				android:backgroundTint="@color/button_bg"
				android:text="@string/next"
				android:textAlignment="textStart"
				android:textColor="#FFFFFFFF"
				app:cornerRadius="0dp"
				app:icon="@drawable/arrow_forward"
				app:iconGravity="end"
				app:iconSize="20dp"
				app:iconTint="#FFFFFFFF" />
		</LinearLayout>

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

