<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/reward_first"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/lesson_list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@color/white"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<Space
			android:layout_width="match_parent"
			android:layout_height="350dip" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="40dip"
			android:layout_marginEnd="40dip"
			android:gravity="center"
			android:text="@string/you_are_about_to_embark_on_an_exciting_journey"
			android:textColor="#000"
			android:textSize="18sp"
			android:textStyle="bold" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="40dip"
			android:layout_marginTop="16dip"
			android:layout_marginEnd="40dip"
			android:breakStrategy="high_quality"
			android:gravity="center"
			android:paddingStart="30dip"
			android:paddingEnd="30dip"
			android:text="@string/your_completed_courses_and_rewards_will_be_here"
			android:textColor="#000"
			android:textSize="16sp" />

		<Button
			android:id="@+id/explore_courses_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="30dip"
			android:layout_marginTop="24dip"
			android:layout_marginEnd="30dip"
			android:backgroundTint="#2F313E"
			android:textColor="@color/white"
			android:text="@string/explore_courses"
			app:cornerRadius="0dip" />
	</LinearLayout>

	<com.google.android.material.bottomnavigation.BottomNavigationView
		android:id="@+id/bottom_navigation"
		android:layout_width="match_parent"
		android:layout_height="100dip"
		app:backgroundTint="@color/white"
		app:elevation="0dp"
		app:itemIconTint="@color/selected_bg"
		app:itemTextColor="#000000"
		app:labelVisibilityMode="labeled"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lesson_list"
		app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>