<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/home"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFFFFF">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingStart="40dip"
		android:paddingEnd="40dip"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#FFFFFF"
				android:text="@string/good_morning"
				android:textColor="#000000"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/user_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#FFFFFF"
				android:text="@string/user_name"
				android:textColor="#000000"
				android:textSize="18sp"
				android:textStyle="bold" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="10dip"
				android:background="#FFFFFF" />

			<ImageView
				android:id="@+id/new_course"
				android:layout_width="match_parent"
				android:layout_height="120dip"
				android:background="#FFFFFF"
				android:src="@drawable/home2" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="30dip"
				android:background="#FFFFFF"
				android:elevation="0dp" />

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical">

					<androidx.cardview.widget.CardView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:cardElevation="0dp">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="#FFFFFF"
							android:orientation="horizontal">

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:backgroundTint="#FFFFFF"
								android:text="@string/courses"
								android:textColor="#000000"
								android:textSize="20sp"
								android:textStyle="bold" />

							<TextView
								android:id="@+id/all_courses"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:background="#FFFFFF"
								android:text="@string/see_all_courses"
								android:textAlignment="textEnd"
								android:textColor="@color/hyperlink" />
						</LinearLayout>
					</androidx.cardview.widget.CardView>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="#FFFFFF"
						android:orientation="horizontal">

						<ImageView
							android:id="@+id/imageView3"
							android:layout_width="150dip"
							android:layout_height="200dip"
							android:layout_weight="0.5"
							android:background="#FFFFFF"
							android:src="@drawable/home2" />

						<Space
							android:layout_width="15dip"
							android:layout_height="wrap_content"
							android:layout_weight="0.5" />

						<ImageView
							android:id="@+id/imageView4"
							android:layout_width="150dip"
							android:layout_height="200dip"
							android:layout_gravity="end"
							android:layout_weight="0.5"
							android:background="#FFFFFF"
							android:src="@drawable/home2" />
					</LinearLayout>
				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dip" />

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#FFFFFF"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="#FFFFFF"
					android:orientation="vertical">

					<androidx.cardview.widget.CardView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="#FFFFFF"
						app:cardElevation="0dp">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="#FFFFFF"
							android:orientation="horizontal">

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:background="#FFFFFF"
								android:text="@string/story_world"
								android:textColor="#000000"
								android:textSize="20sp"
								android:textStyle="bold" />

							<TextView
								android:id="@+id/all_books"
								android:layout_width="wrap_content"
								android:layout_height="match_parent"
								android:layout_weight="1"
								android:background="#FFFFFF"
								android:text="@string/see_all_books"
								android:textAlignment="viewEnd"
								android:textColor="@color/hyperlink"
								android:textSize="16sp" />
						</LinearLayout>
					</androidx.cardview.widget.CardView>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="#FFFFFF"
						android:orientation="horizontal">

						<ImageView
							android:id="@+id/imageView5"
							android:layout_width="150dip"
							android:layout_height="200dip"
							android:layout_weight="1"
							android:background="#FFFFFF"
							android:src="@drawable/home2" />

						<Space
							android:layout_width="15dip"
							android:layout_height="wrap_content"
							android:layout_weight="1" />

						<ImageView
							android:id="@+id/imageView7"
							android:layout_width="150dip"
							android:layout_height="200dip"
							android:layout_weight="1"
							android:background="#FFFFFF"
							android:src="@drawable/home2" />
					</LinearLayout>
				</LinearLayout>
			</androidx.cardview.widget.CardView>
		</LinearLayout>
	</ScrollView>

	<com.google.android.material.bottomnavigation.BottomNavigationView
		android:id="@+id/bottom_navigation"
		android:layout_width="match_parent"
		android:layout_height="100dip"
		android:background="#FFFFFF"
		app:elevation="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>